Added Stanford CoreNLP ingore
Added Stanford CoreNLP ignoration to gitignore.
That is java byte code needed to run application, which is too large to store it in repo.

--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,6 @@ FakesAssemblies/
 **/*.Server/GeneratedArtifacts
 **/*.Server/ModelManifest.xml
 _Pvt_Extensions
+
+# Stanford CoreNLP model
+stanford-corenlp-3.5.2-models
