Implementation of first version of algorithm
Hardcoded first version of algorithm.

--- a/Notenizer/Notenizer.csproj
+++ b/Notenizer/Notenizer.csproj
@@ -316,6 +316,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Extensions\Extensions.csproj">
+      <Project>{a935e0ec-5e82-46b1-a209-405d11faa30c}</Project>
+      <Name>Extensions</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
