--- a/NotenizerObjects/NotenizerObjects.csproj
+++ b/NotenizerObjects/NotenizerObjects.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="NotenizerDependency.cs" />
     <Compile Include="Note.cs" />
+    <Compile Include="NoteObject.cs" />
     <Compile Include="NotePart.cs" />
     <Compile Include="NotenizerRelation.cs" />
     <Compile Include="NotenizerSentence.cs" />
