Updated progress report

--- a/NotenizerObjects/NotenizerObjects.csproj
+++ b/NotenizerObjects/NotenizerObjects.csproj
@@ -48,7 +48,7 @@
     <Compile Include="NotenizerDependency.cs" />
     <Compile Include="Note.cs" />
     <Compile Include="NotenizerRule.cs" />
-    <Compile Include="NoteObject.cs" />
+    <Compile Include="NoteParticle.cs" />
     <Compile Include="NotePart.cs" />
     <Compile Include="NotenizerRelation.cs" />
     <Compile Include="NotenizerSentence.cs" />
