--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MongoDB.Bson, Version=2.1.0.145, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Notenizer\ExternalDll\MongoDB.Bson.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
@@ -83,6 +87,10 @@
     <ProjectReference Include="..\Constants\Constants.csproj">
       <Project>{ce035769-8676-4ef9-a711-17da8ecd8e17}</Project>
       <Name>Constants</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DB\DB.csproj">
+      <Project>{b91de5e7-3fd7-4087-85d6-a69eb30be1cc}</Project>
+      <Name>DB</Name>
     </ProjectReference>
     <ProjectReference Include="..\Enums\Enums.csproj">
       <Project>{57e4152f-a7b5-4107-9eeb-54bb78bf6dfc}</Project>
