BugFix - Showing all unused words / depenendecies in editing window
Added class for CompressedDependencies.

--- a/NotenizerObjects/NotenizerObjects.csproj
+++ b/NotenizerObjects/NotenizerObjects.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompressedDependencies.cs" />
     <Compile Include="Note.cs" />
     <Compile Include="NotenizerAndParserRule.cs" />
     <Compile Include="NotenizerDependency.cs" />
