--- a/Enums/Enums.csproj
+++ b/Enums/Enums.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="ComparisonType.cs" />
     <Compile Include="CreatedBy.cs" />
+    <Compile Include="NamedEntityType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepresentMode.cs" />
     <Compile Include="TokenType.cs" />
