--- a/NotenizerObjects/NotenizerObjects.csproj
+++ b/NotenizerObjects/NotenizerObjects.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompressedDependencies.cs" />
+    <Compile Include="NamedEntity.cs" />
     <Compile Include="Note.cs" />
     <Compile Include="NotenizerAndParserRule.cs" />
     <Compile Include="NotenizerDependency.cs" />
